<resources>
    <string name="app_name">格致商户版</string>
    <string name="exit_app">再按一次退出格致商户版</string>
    <string name="frag_first">首页</string>
    <string name="main_found">发现</string>
    <string name="main_near">附近</string>
    <string name="main_mine">店铺</string>
    <string name="main_social">社区</string>
    <string name="tribe_news">部落快报</string>
    <string name="setting">设置</string>
    <string name="take_photo">拍摄</string>
    <string name="choose_photo">从手机相册选择</string>
    <string name="shopping">购物</string>
    <string name="first_observe">办公预订</string>
    <string name="first_fix">物业报修</string>
    <string name="first_open">社区开门</string>
    <string name="exit_login">退出登录</string>
    <string name="feedback">意见反馈</string>
    <string name="help_phone">110-120-119</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>
    <string name="next">下一步</string>
    <string name="phone_exist">手机号已存在</string>
    <string name="phone_not_empty">手机号不能为空</string>
    <string name="verify_not_empty">校验码不能为空</string>
    <string name="wrong_verify">验证码不正确</string>
    <string name="connect_fail">服务器无法连接</string>
    <string name="wrong_number">手机号码格式错误</string>
    <string name="update_success">修改成功</string>
    <string name="loading">加载中</string>
    <string name="delete_fail">删除失败</string>
    <string name="delete">刪除</string>
    <string name="delete_success">删除成功</string>
    <string name="update_fail">更改失敗</string>
    <string name="add_success">添加成功</string>
    <string name="not_found">未找到</string>
    <string name="no_function">功能暂未开通，敬请期待</string>
    <string name="wrong_id_number">身份证格式不正确</string>
    <string name="cancel_success">取消成功</string>
    <string name="recharge_fail">充值失败</string>
    <string name="birthday">出生日期</string>
    <string name="sex">性别</string>
    <string name="head">商户图标</string>
    <string name="address">所在地区</string>
    <string name="detail_address">发货地址</string>
    <string name="number">联系人手机号码"</string>
    <string name="motion">情感状态</string>
    <string name="add_address">新增地址</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="edit_phone">请输入手机号</string>
    <string name="edit_verify">请输入验证码</string>
    <string name="send_verify">获取验证码</string>
    <string name="input_verify">请输入6位验证码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="phone">手机号码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="married">已婚</string>
    <string name="single">单身</string>
    <string name="loving">热恋</string>
    <string name="name">姓名</string>
    <string name="detail_street_info">街道门牌信息</string>
    <string name="phone_bind">手机绑定</string>
    <string name="self_info">商户信息</string>
    <string name="lady">女士</string>
    <string name="gentlemen">先生</string>
    <string name="identity_verify">商户认证</string>
    <string name="phone_can_not_receive">手机收不到短信验证码，点击</string>
    <string name="get_voice_verify">获取语音验证码</string>
    <string name="edit_name">请输入姓名</string>
    <string name="real_name">店主姓名</string>
    <string name="input_real_birthday">请选择真实出生日期</string>
    <string name="identify_number">身份证号</string>
    <string name="input_identify_number">请输入身份证号</string>
    <string name="reset_pay_pwd">重置支付密码</string>
    <string name="forget_pwd">忘记原密码</string>
    <string name="input_nickname">请输入名称(最多8个字)</string>
    <string name="save">保存</string>
    <string name="location">所在地</string>
    <string name="my_order">订单管理</string>
    <string name="pre_pay">待付款</string>
    <string name="pre_receive">待收货</string>
    <string name="al_cancel">已取消</string>
    <string name="already_finish">已结束</string>
    <string name="complete">已完成</string>
    <string name="default_address">默认地址</string>
    <string name="average_low">人均最低</string>
    <string name="average_high">人均最高</string>
    <string name="most_popular">人气最高</string>
    <string name="most_near">离我最近</string>
    <string name="most_comment">评价最高</string>
    <string name="goods_list">商品列表</string>
    <string name="not_empty">信息不能为空</string>
    <string name="add_car">加入购物车</string>
    <string name="collect">收藏</string>
    <string name="shopping_car">购物车</string>
    <string name="no_goods">没有商品</string>
    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="total">合计:</string>
    <string name="empty_car">购物车是空的</string>
    <string name="account">结算</string>
    <string name="pay_pwd">提款密码</string>
    <string name="wrong_pwd">密码错误</string>
    <string name="input_pay_pwd">请输入支付密码</string>
    <string name="input_new_pwd">请输入新支付密码</string>
    <string name="re_input_new_pwd">确认支付密码</string>
    <string name="re_input_wrong">密码输入不一致，请重新输入</string>
    <string name="pwd_not_6">密码不足6位</string>
    <string name="bill_detail">账单详情</string>
    <string name="top_up">充值</string>
    <string name="deposit">提现</string>
    <string name="mine_bank_card">我的银行卡</string>
    <string name="scan_pay">扫码支付</string>
    <string name="pay_bill">对账单</string>
    <string name="wallet_coupon">代金券</string>
    <string name="wallet_financial">企业金融</string>
    <string name="bill">账单</string>
    <string name="today">今天</string>
    <string name="trade_time">交易时间</string>
    <string name="trade_money">交易金额</string>
    <string name="shop_name">商家名称</string>
    <string name="login_first">请先登录</string>
    <string name="enable_booking">可预订</string>
    <string name="room_enable">有包间</string>
    <string name="my_wallet">商户钱包</string>
    <string name="bank_card">银行卡</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="card_bind">银行卡绑定</string>
    <string name="bank_open">开户行</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="bank_owner_name">开户名</string>
    <string name="card_number">银行卡号</string>
    <string name="input_card_num">请输入银行卡号</string>
    <string name="verify">验证码</string>
    <string name="bind">确认绑定</string>
    <string name="choose_bank">请选择开户行</string>
    <string name="manage">管理</string>
    <string name="china_bank">中国银行</string>
    <string name="ic_bank">中国工商银行</string>
    <string name="farm_bank">中国农业银行</string>
    <string name="business_bank">招商银行</string>
    <string name="build_bank">中国建设银行</string>
    <string name="light_bank">光大银行</string>
    <string name="traffic_bank">交通银行</string>
    <string name="pufa_bank">浦发银行</string>
    <string name="xy_bank">兴业银行</string>
    <string name="no_order">您还没有订单</string>
    <string name="new_order">确认下单</string>
    <string name="all">全部</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_send">待发货</string>
    <string name="wait_receive">待收货</string>
    <string name="delivery_order">卖家已发货</string>
    <string name="paying">付款中</string>
    <string name="payed_order">已付款</string>
    <string name="send">发货</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_fail">上传失败</string>
    <string name="order_number">订单编号:</string>
    <string name="order_detail">订单详情</string>
    <string name="send_method">配送方式:</string>
    <string name="send_money">快递运费</string>
    <string name="total_price">价格合计</string>
    <string name="create_time">创建时间：</string>
    <string name="pay_time">付款时间:</string>
    <string name="delivery_time">发货时间:</string>
    <string name="receive_time">收货时间:</string>
    <string name="set_receive">确认收货</string>
    <string name="store_management">商品管理</string>
    <string name="community_around">社区周边</string>
    <string name="i_want_visit">我要参观</string>
    <string name="property_fix">物业报修</string>
    <string name="repast">餐饮</string>
    <string name="entertainment">娱乐</string>
    <string name="my_reserve">座位预订</string>
    <string name="time">时间</string>
    <string name="people_count">人数</string>
    <string name="restaurant">餐厅</string>
    <string name="spot">地点</string>
    <string name="contact">联系人</string>
    <string name="contact_phone">联系电话</string>
    <string name="cancel_order">取消订单</string>
    <string name="pay_way">支付方式</string>
    <string name="pay_balance">余额支付</string>
    <string name="pay_wechat">微信支付</string>
    <string name="pay_ali">支付宝支付</string>
    <string name="sure_to_pay">确认支付</string>
    <string name="input_pwd">输入密码</string>
    <string name="go_pay">去付款</string>
    <string name="go_send">发货</string>
    <string name="pay_success">支付成功</string>
    <string name="please_add_address">请添加收货地址</string>
    <string name="food">餐饮</string>
    <string name="sort">智能排序</string>
    <string name="filter">筛选</string>
    <string name="reserve_processing_comment">订单结果会通过推送的方式告知预约人</string>
    <string name="reserve_success_comment">已按预约人的要求保留座位</string>
    <string name="reserve_fail_comment">未能按照指定要求保留座位</string>
    <string name="reserve_processing">预订申请</string>
    <string name="reserve_success">订座成功</string>
    <string name="reserve_fail">订座失败</string>
    <string name="add_reserve">在线订座</string>
    <string name="add_reserve_backup">可填写附加要求，我们会尽量安排，不超过20个字</string>
    <string name="reserve_food">预定餐座</string>
    <string name="reserve_seat_success">订座成功</string>
    <string name="cancel_update">取消修改</string>
    <string name="ok">确定</string>
    <string name="not_enough_goods">库存不足</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="baby_chair">宝宝椅</string>
    <string name="bar">有酒吧区域</string>
    <string name="business_circle">近商圈</string>
    <string name="business_dinner">商务宴请</string>
    <string name="facilities_for_disabled">残疾人设施</string>
    <string name="organic_food">有机食物</string>
    <string name="parking">停车位</string>
    <string name="pet_ok">可带宠物</string>
    <string name="room">有包间</string>
    <string name="restaurants_of_hotel">酒店内餐厅</string>
    <string name="scene_seat">有观景位</string>
    <string name="small_party">适合小聚</string>
    <string name="subway">地铁</string>
    <string name="valet_parking">代客泊车</string>
    <string name="vip_rights">会员权益</string>
    <string name="weekend_brunch">周末早午餐</string>
    <string name="order">订单</string>
    <string name="main_goods">商品</string>
    <string name="create_store">创建商铺</string>
    <string name="store_identify">商户认证</string>
    <string name="store_set">店铺设置</string>
    <string name="community">社区</string>
    <string name="upload_photo">上传图片</string>
    <string name="store_name">商家名称</string>
    <string name="input_store_name">请输入店铺名称</string>
    <string name="store_phone">店主手机号码</string>
    <string name="store_main_phone">主要电话</string>
    <string name="logistics_number">物流单号</string>
    <string name="logistics_way">选择物流公司</string>
    <string name="contacy_name">联系人姓名</string>
    <string name="store_setting">店铺设置</string>
    <string name="office">办公用品</string>
    <string name="life_use">生活用品</string>
    <string name="furniture">家具</string>
    <string name="dress">个护化妆</string>
    <string name="baby">妇婴用品</string>
    <string name="submit">提交</string>
    <string name="uploading">上传中</string>
    <string name="store_category">经营品类</string>
    <string name="sub_store_name">分店名称</string>
    <string name="average_fee">人均消费</string>
    <string name="store_other_phone">其他电话</string>
    <string name="store_address">门店地址</string>
    <string name="store_logo">店铺LOGO</string>
    <string name="store_environment">店铺环境图</string>
    <string name="recommend_reason">推荐理由</string>
    <string name="recommend_topic">推荐话题</string>
    <string name="store_introduction">店铺介绍</string>
    <string name="send_address">发货地址</string>
    <string name="serve_time">营业时间</string>
    <string name="vip">会员卡</string>
    <string name="create_goods_standard">创建新规格商品</string>
    <string name="confirm_order">确认通过</string>
    <string name="get_fail">获取失败</string>
    <string name="logistic_num">物流单号</string>
    <string name="cancel_reserve">预定取消</string>
</resources>