<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:clipToPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/title_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:textColor="@color/title_text_color"
            android:layout_centerInParent="true"
            android:text="@string/card_bind" />

        <include
            layout="@layout/back_img_white"
            android:id="@+id/back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/board_margin_horizontal"
        android:layout_marginStart="@dimen/board_margin_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/usual_item_height"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_owner_name"
                android:textColor="#000"
                android:textSize="@dimen/dimens_16sp" />

            <EditText
                android:id="@+id/card_add_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:background="@null"
                android:hint="@string/input_real_name"
                android:textColor="@color/common_gray" />
        </LinearLayout>

        <include layout="@layout/split_line_no_margin_common" />

        <LinearLayout
            android:id="@+id/card_add_choose"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_open"
                android:textColor="#000"
                android:textSize="@dimen/dimens_16sp" />

            <TextView
                android:id="@+id/card_add_bank_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/choose_bank"
                android:textColor="@color/common_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@mipmap/down"
                    android:rotation="-90" />
            </RelativeLayout>
        </LinearLayout>

        <include layout="@layout/split_line_no_margin_common" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:textColor="#000"
                android:textSize="@dimen/dimens_16sp" />

            <EditText
                android:id="@+id/card_add_bank_num"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="@null"
                android:hint="@string/input_card_num"
                android:inputType="number"
                android:textColor="@color/common_gray" />
        </LinearLayout>

        <include layout="@layout/split_line_no_margin_common" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/dimens_16sp" />

            <EditText
                android:id="@+id/card_add_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:background="@null"
                android:hint="@string/input_phone"
                android:inputType="number"
                android:textColor="@color/common_gray" />
        </LinearLayout>

        <include layout="@layout/split_line_no_margin_common" />

        <LinearLayout
            android:id="@+id/ll_verify_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify"
                android:textColor="#000"
                android:textSize="@dimen/dimens_16sp" />

            <EditText
                android:id="@+id/card_add_verify"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:background="@null"
                android:hint="@string/edit_verify"
                android:inputType="number"
                android:textColor="@color/common_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/card_send_verify"
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/text_background_round"
                    android:gravity="center"
                    android:text="@string/send_verify"
                    android:textColor="@color/custom_color" />
            </RelativeLayout>
        </LinearLayout>

        <include layout="@layout/split_line_no_margin_common" />

        <Button
            android:id="@+id/card_add_finish"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginEnd="@dimen/button_margin"
            android:layout_marginStart="@dimen/button_margin"
            android:layout_marginTop="36dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/bind"
            android:textColor="#fff"
            android:textSize="@dimen/dimens_20sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#f2f2f2"
        android:text="持卡人信息"
        android:textSize="@dimen/dimens_18sp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/activity_horizontal_margin" />

</LinearLayout>