<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="#2A2A2A">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_reserve"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <include
            android:id="@+id/add_serve_back"
            layout="@layout/back_img_white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/add_serve_time_select"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <TextView
            android:id="@+id/add_serve_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/divide_gray" />

    <LinearLayout
        android:id="@+id/add_serve_people_select"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people_count" />

        <TextView
            android:id="@+id/add_serve_count"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="end" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@mipmap/arrow_right" />
    </LinearLayout>

    <include layout="@layout/split_area" />

    <LinearLayout
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <EditText
            android:id="@+id/add_serve_name"
            android:textSize="@dimen/dimens_14sp"
            android:background="@null"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:hint="@string/edit_name" />

        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/add_serve_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/add_serve_radio_female"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:button="@null"
                    android:drawablePadding="4dp"
                    android:drawableLeft="@drawable/btn_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lady" />

                <RadioButton
                    android:id="@+id/add_serve_radio_male"
                    android:background="@null"
                    android:button="@null"
                    android:drawablePadding="4dp"
                    android:drawableLeft="@drawable/btn_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gentlemen" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/divide_gray" />

    <LinearLayout
        android:id="@+id/add_serve_phone_area"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="40dp">

        <TextView
            android:id="@+id/add_serve_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="123131" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageView
                android:id="@+id/add_serve_update_phone"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:src="@mipmap/address_edit_button" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/add_serve_update_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="end"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_serve_phone_new"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="phone"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/dimens_14sp"
                android:hint="@string/edit_phone" />

            <TextView
                android:id="@+id/add_serve_cancel"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:text="@string/cancel_update"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textSize="@dimen/dimens_12sp"
                android:textColor="@color/custom_color"
                android:gravity="center"
                android:background="@drawable/text_background" />
        </LinearLayout>

        <include layout="@layout/split_line_no_margin_common" />

        <LinearLayout
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/add_serve_verify"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:textSize="@dimen/dimens_14sp"
                android:inputType="number"
                android:hint="@string/edit_verify" />
        </LinearLayout>

        <LinearLayout
            android:paddingTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/tint_bg"
            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimens_12sp"
                android:text="@string/phone_can_not_receive" />

            <TextView
                android:id="@+id/add_serve_voice_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimens_12sp"
                android:textColor="@color/custom_color"
                android:text="@string/get_voice_verify" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/split_area" />

    <EditText
        android:id="@+id/add_serve_note"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@null"
        android:maxLength="20"
        android:textSize="@dimen/dimens_12sp"
        android:gravity="center_vertical"
        android:hint="@string/add_reserve_backup" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/tint_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|bottom">

        <TextView
            android:id="@+id/add_serve_finish"
            android:layout_width="315dp"
            android:layout_marginTop="36dp"
            android:layout_height="40dp"
            android:text="@string/reserve_food"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_16sp"
            android:background="@drawable/button_selector" />
    </LinearLayout>
</LinearLayout>