<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="160dp"
        android:background="@drawable/panel_background_round"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimens_18sp"
            android:text="@string/sex"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"/>
        <TextView
            android:id="@+id/self_male"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:background="@drawable/text_background_round"
            android:textColor="@color/common_gray"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/dimens_16sp"
            android:text="@string/male"/>
        <include layout="@layout/split_area"/>
        <TextView
            android:id="@+id/self_female"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:textColor="@color/common_gray"
            android:textSize="@dimen/dimens_16sp"
            android:background="@drawable/text_background_round"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/female"/>
        <include layout="@layout/split_area"/>
    </LinearLayout>
</RelativeLayout>